force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/copadoQuality__Compliance_Rule_Violation__c.object-meta.xml
<CustomObject>
    <description>This object will hold the details about the violations found in the CCH scans according to the specified ruleset.</description>
    <label>Compliance Rule Violation</label>
    <nameField>
        <displayFormat>CRV-{0000}</displayFormat>
        <label>Compliance Rule Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rule Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>