force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/fields/copadoQuality__End_Line__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__End_Line__c</fullName>
    <label>End Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>