force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/fields/copadoQuality__Result__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>copado__Result__c</referenceTo>
    <relationshipLabel>Compliance Rule Violations</relationshipLabel>
    <relationshipName>Compliance_Rule_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>