force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/fields/copadoQuality__Start_Column__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Start_Column__c</fullName>
    <label>Start Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>