force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/fields/copadoQuality__Start_Line__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Start_Line__c</fullName>
    <label>Start Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>