force-app/main/default/objects/copadoQuality__Compliance_Rule_Violation__c/fields/copadoQuality__URI__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__URI__c</fullName>
    <label>URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>